--- a/TASVideos/Pages/Submissions/Catalog.cshtml
+++ b/TASVideos/Pages/Submissions/Catalog.cshtml
@@ -42,7 +42,7 @@
 					<div class="col-2">
 						<button 
 							disable="!Model.Catalog.GameId.HasValue || Model.Catalog.GameId == -1" 
-							id="create-rom" 
+							id="create-version" 
 							type="button" 
 							class="btn btn-primary">New</button>
 					</div>
