another variable rename to version

--- a/TASVideos/Pages/Games/Rewire.cshtml
+++ b/TASVideos/Pages/Games/Rewire.cshtml
@@ -102,9 +102,9 @@
 						<span condition="!Model.FromGame.Versions!.Any()">Roms</span>
 					</h4>
 					<ul>
-						@foreach (var rom in Model.FromGame.Versions!)
+						@foreach (var version in Model.FromGame.Versions!)
 						{
-							<li>@rom.Title</li>
+							<li>@version.Title</li>
 						}
 					</ul>
 				</div>
