Remove some unnecessary nullability supressions (they weren't needed, then they were, and now they aren't anymore)

--- a/TASVideos/Pages/Shared/_Ratings.cshtml
+++ b/TASVideos/Pages/Shared/_Ratings.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserRatings
 @{
-	ViewData["Title"] = $"Ratings for {Model!.UserName}";
+	ViewData["Title"] = $"Ratings for {Model.UserName}";
 
 	// ReSharper disable once UnusedVariable
 	bool isMyPage = ViewData["IsMyPage"] as bool? ?? throw new InvalidOperationException("IsMyPage not set");
