--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserProfile
 @{
-	var lastLoggedIn = Model!.LastLoggedInTimeStamp ?? DateTime.UtcNow;
+	var lastLoggedIn = Model.LastLoggedInTimeStamp ?? DateTime.UtcNow;
 }
 <row>
 	<div class="col-md-6">
