--- a/TASVideos/Pages/Shared/Components/WikiTextChangeLog/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/WikiTextChangeLog/Default.cshtml
@@ -25,8 +25,9 @@
 				<td>@item.CreateTimestamp.ToShortTimeString()</td>
 				<td>
 					<a
-						asp-page="/Wiki/Diff"
+						asp-page="/Wiki/PageHistory"
 						asp-route-path="@item.PageName"
+						asp-route-latest="true"
 						asp-route-fromRevision="@(item.Revision - 1)"
 						asp-route-toRevision="@item.Revision"
 						class="btn btn-secondary">
