--- a/TASVideos/Pages/Wiki/PageHistory.cshtml
+++ b/TASVideos/Pages/Wiki/PageHistory.cshtml
@@ -99,9 +99,11 @@
 								onClick="diffBtnClicked(null, @revision.Revision)">
 								To
 							</button>
+							
 						</div>
 					</td>
 					<td>
+						
 						<delete-button
 							permission="DeleteWikiPages"
 							asp-href="/Wiki/DeletedPages/DeleteRevision?path=@(Model.History.PageName)&revision=@revision.Revision"
@@ -109,6 +111,11 @@
 							class="btn-sm">
 							<i class="fa fa-remove"></i>
 						</delete-button>
+						<form asp-page-handler="RollbackLatest">
+							<input type="hidden" asp-for="Path" />
+							<input type="hidden" name="previousRevision" value="@(164)" />
+							<button condition="i == 0 && revision.Revision > 1" type="submit" class="btn btn-sm btn-warning" title="Rollback this revision"><i class="fa fa-undo"></i></button>
+						</form>
 					</td>
 				</tr>
 			}
