--- a/TASVideos/Pages/Shared/Components/TopicFeed/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/TopicFeed/Default.cshtml
@@ -1,7 +1,10 @@
 ﻿@model TopicFeedModel
 
 <div class="@(Model!.RightAlign ? "right-align-topic" : "")">
-	<h3 condition="!string.IsNullOrWhiteSpace(Model.Heading)" class="card-header topic-header">@Model.Heading</h3>
+	<h3 condition="!string.IsNullOrWhiteSpace(Model.Heading)" class="card-header topic-header">
+		<span condition="string.IsNullOrWhiteSpace(Model.WikiLink)">@Model.Heading</span>
+		<wiki-link page-name="@Model.WikiLink" condition="!string.IsNullOrWhiteSpace(Model.WikiLink)">@Model.Heading</wiki-link>
+	</h3>
 	@foreach (var post in Model.Posts)
 	{
 		var collapseId = $"collapse-content-{post.Id}";
