--- a/TASVideos/Pages/Activity/Publishers.cshtml
+++ b/TASVideos/Pages/Activity/Publishers.cshtml
@@ -4,7 +4,26 @@
 
 <p>Movies published by <profile-link username="@Model.UserName"></profile-link></p>
 <hr />
-@foreach (var pub in Model.Publications.OrderByDescending(p => p.Id))
-{
-	<pub-link id="pub.Id">@pub.Title</pub-link><br />
-}
+<div class="table-container">
+	<table class="table table-striped">
+		<tr>
+			<th>Date</th>
+			<th>Publication</th>
+			<th>Class</th>
+		</tr>
+		@foreach (var pub in Model.Publications.OrderByDescending(p => p.Id))
+		{
+			<tr>
+				<td>
+					<timezone-convert asp-for="@pub.CreateTimestamp" date-only="true" />
+				</td>
+				<td>
+					<pub-link id="pub.Id">[@pub.Id] @pub.Title"</pub-link><br />
+				</td>
+				<td>
+					@pub.Class
+				</td>
+			</tr>
+		}
+	</table>
+</div>
