--- a/TASVideos/Pages/Games/Versions/List.cshtml
+++ b/TASVideos/Pages/Games/Versions/List.cshtml
@@ -1,25 +1,25 @@
 ﻿@page "/Games/{gameId}/Versions/List"
 @model ListModel
 @{
-	ViewData["Title"] = $"Versions for {Model.Roms.GameDisplayName}";
+	ViewData["Title"] = $"Versions for {Model.Versions.GameDisplayName}";
 }
 
-<h4>Game: <a asp-page="/Games/Index" asp-route-id="@Model.GameId">@Model.Roms.GameDisplayName</a></h4>
+<h4>Game: <a asp-page="/Games/Index" asp-route-id="@Model.GameId">@Model.Versions.GameDisplayName</a></h4>
 <a asp-page="Edit" permission="CatalogMovies" asp-route-gameId="@Model.GameId" class="btn btn-primary"><i class="fa fa-plus"></i> Create</a>
 <hr />
 <table class="table table-bordered table-striped">
 	<tr>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().DisplayName)</th>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().TitleOverride)</th>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Version)</th>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Region)</th>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().VersionType)</th>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Md5)</th>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().Sha1)</th>
-		<th>@Html.DisplayNameFor(m => m.Roms.Roms.First().SystemCode)</th>
+		<th>@Html.DisplayNameFor(m => m.Versions.Versions.First().DisplayName)</th>
+		<th>@Html.DisplayNameFor(m => m.Versions.Versions.First().TitleOverride)</th>
+		<th>@Html.DisplayNameFor(m => m.Versions.Versions.First().Version)</th>
+		<th>@Html.DisplayNameFor(m => m.Versions.Versions.First().Region)</th>
+		<th>@Html.DisplayNameFor(m => m.Versions.Versions.First().VersionType)</th>
+		<th>@Html.DisplayNameFor(m => m.Versions.Versions.First().Md5)</th>
+		<th>@Html.DisplayNameFor(m => m.Versions.Versions.First().Sha1)</th>
+		<th>@Html.DisplayNameFor(m => m.Versions.Versions.First().SystemCode)</th>
 		<th>Actions</th>
 	</tr>
-	@foreach (var version in Model.Roms.Roms.OrderBy(r => r.DisplayName))
+	@foreach (var version in Model.Versions.Versions.OrderBy(r => r.DisplayName))
 	{
 		<tr>
 			<td>@version.DisplayName</td>
