--- a/TASVideos/Pages/Shared/Components/NoRom/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/NoRom/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model TASVideos.ViewComponents.Models.MissingRomModel
+﻿@model TASVideos.ViewComponents.Models.MissingModel
 
 @if (Model!.Publications.Any())
 {
