--- a/TASVideos/Pages/Submissions/Catalog.cshtml
+++ b/TASVideos/Pages/Submissions/Catalog.cshtml
@@ -33,11 +33,11 @@
 			</form-group>
 			<form-group>
 				<fullrow>
-					<label asp-for="Catalog.RomId" class="form-control-label"></label>
+					<label asp-for="Catalog.GameVersionId" class="form-control-label"></label>
 				</fullrow>
 				<row>
 					<div class="col-10">
-						<select asp-for="Catalog.RomId" asp-items="@UiDefaults.DefaultEntry.Concat(Model.AvailableRoms)" class="form-control"></select>
+						<select asp-for="Catalog.GameVersionId" asp-items="@UiDefaults.DefaultEntry.Concat(Model.AvailableVersions)" class="form-control"></select>
 					</div>
 					<div class="col-2">
 						<button 
@@ -65,7 +65,7 @@
 			"@Html.IdFor(m => m.Catalog.SystemId)",
 			"@Html.IdFor(m => m.Catalog.SystemFrameRateId)",
 			"@Html.IdFor(m => m.Catalog.GameId)",
-			"@Html.IdFor(m => m.Catalog.RomId)",
+			"@Html.IdFor(m => m.Catalog.GameVersionId)",
 			"@HttpContext.CurrentPathToReturnUrl()");
 	</script>
 }
