--- a/TASVideos/Pages/Games/List.cshtml
+++ b/TASVideos/Pages/Games/List.cshtml
@@ -6,7 +6,8 @@
 		(!string.IsNullOrWhiteSpace(Model.Games.SearchTerms) ? " - " + $@"""{Model.Games.SearchTerms}""" : string.Empty);
 }
 
-<a asp-page="Edit" permission="CatalogMovies" class="btn btn-primary mb-3 float-end"><i class="fa fa-plus"></i> Create</a>
+<a asp-page="/GameGroups/List" class="btn btn-primary mb-3 float-end mr-5">Game Groups</a>
+<a asp-page="Edit" permission="CatalogMovies" class="btn btn-primary mb-3 float-end me-1"><i class="fa fa-plus"></i> Create</a>
 <a asp-page="Rewire" permission="RewireGames" class="btn btn-primary mb-3 float-end me-1"><i class="fa fa-wrench"></i> Rewire</a>
 <form class="row">
 	<div class="col-lg-5 col-12 mb-1">
