--- a/TASVideos/Pages/Roles/_Role.cshtml
+++ b/TASVideos/Pages/Roles/_Role.cshtml
@@ -1,4 +1,7 @@
 ﻿@model TASVideos.Pages.Roles.Models.RoleDisplayModel
+@{
+	var groupedPermissions = Model.Permissions.GroupBy(p => p.Group());
+}
 <card class="mb-2">
 	<cardbody>
 		<h5 class="card-title">@Model!.Name</h5>
@@ -21,10 +24,22 @@
 					</a>
 				</strong>
 				<br />
-				@foreach (var permission in Model.Permissions)
+				@foreach (var permissionGroup in groupedPermissions)
+				{
+					<div class="ml-md-0 ml-sm-4">
+						@permissionGroup.Key
+						<ul>
+							@foreach (var permission in permissionGroup.OrderBy(g => g.ToString()))
+							{
+								<li>@permission.ToString().SplitCamelCase()</li>
+							}
+						</ul>
+					</div>
+				}
+				@*@foreach (var permission in Model.Permissions)
 				{
 					<div class="ml-md-0 ml-sm-4">@permission.ToString().SplitCamelCase()</div>
-				}
+				}*@
 			</div>
 			<div condition="@Model.Links.Any()" class="col-lg-3 col-md-12">
 				<strong>@Html.DisplayNameFor(m => m.Links):</strong><br />
