--- a/TASVideos/Pages/Systems/Create.cshtml
+++ b/TASVideos/Pages/Systems/Create.cshtml
@@ -24,10 +24,10 @@
 			</form-group>
 		</column>
 	</row>
-	<div class="text-center mt-3">
+	<form-button-bar>
 		<submit-button class="btn btn-primary"><i class="fa fa-save"></i> Save</submit-button>
 		<a asp-page="Index" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
-	</div>
+	</form-button-bar>
 </form>
 
 @section Scripts {
