--- a/TASVideos/Pages/Systems/Edit.cshtml
+++ b/TASVideos/Pages/Systems/Edit.cshtml
@@ -24,10 +24,10 @@
 			<span asp-validation-for="System.DisplayName" class="text-danger"></span>
 		</column>
 	</row>
-	<div class="text-center mt-3">
+	<form-button-bar>
 		<submit-button class="btn btn-primary"><i class="fa fa-save"></i> Save</submit-button>
 		<a class="btn btn-secondary" asp-page="Index"><i class="fa fa-times"></i> Cancel</a>
-	</div>
+	</form-button-bar>
 </form>
 
 <a class="btn btn-primary float-end mb-2" asp-page="CreateFramerate" asp-route-systemId="@Model.Id">Create</a>
