advertise userfile upload a bit more
- added upload button to userfile index page
- assigned primary color to the upload button since it's an actionable thing like submit movie (for which I added the icon)
- assigned secondary color for "all files" and profile link buttons
- sorted per-game userfiles by descending time just like per-user files are sorted (old site sorted both the same way too)

--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -15,12 +15,10 @@
 
 <div permission="SubmitMovies" class="float-end">
 	<div class="mb-1">
-		<a asp-page="Submit" class="btn btn-primary">Submit a Movie</a>
+		<a asp-page="Submit" class="btn btn-primary"><i class="fa fa-upload"></i> Submit a Movie</a>
 	</div>
 	<div>
-		<a asp-page="Index" asp-route-user="@User.Name()" class="btn btn-secondary">
-			My Submissions
-		</a>
+		<a asp-page="Index" asp-route-user="@User.Name()" class="btn btn-secondary">My Submissions</a>
 	</div>
 </div>
 
