--- a/TASVideos/Pages/UserFiles/Index.cshtml
+++ b/TASVideos/Pages/UserFiles/Index.cshtml
@@ -5,7 +5,8 @@
 }
 
 <fullrow class="mt-2 mb-2">
-	<a asp-page="/Profile/UserFiles" class="float-end btn btn-primary">My Movies</a>
+	<a asp-page="/UserFiles/Upload" class="btn btn-primary"><i class="fa fa-upload"></i> Upload</a>
+	<a asp-page="/Profile/UserFiles" class="float-end btn btn-secondary">My Movies</a>
 </fullrow>
 
 <row>
