--- a/TASVideos/Pages/Shared/Components/UserMovies/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/UserMovies/Default.cshtml
@@ -19,4 +19,7 @@
 		}
 	</table>
 </div>
-<a asp-page="/UserFiles/Index">More WIPs...</a>
+<a asp-page="/UserFiles/Index">More User Files...</a>
+<div class="mt-2">
+	<a asp-page="/UserFiles/Upload" class="btn btn-primary btn-sm"><i class="fa fa-upload"></i> Upload a User File</a>
+</div>
