advertise userfile upload a bit more (#1348)
* advertise userfile upload a bit more

- added upload button to userfile index page
- assigned primary color to the upload button since it's an actionable thing like submit movie (for which I added the icon)
- assigned secondary color for "all files" and profile link buttons
- sorted per-game userfiles by descending time just like per-user files are sorted (old site sorted both the same way too)

* add upload userfile button to `module:usermovies` like the old site did, so it appears on main page all the time

* consistent button thickness

--- a/TASVideos/Pages/Shared/Components/UserMovies/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/UserMovies/Default.cshtml
@@ -19,4 +19,7 @@
 		}
 	</table>
 </div>
-<a asp-page="/UserFiles/Index">More WIPs...</a>
+<a asp-page="/UserFiles/Index">More User Files...</a>
+<div class="mt-4">
+	<a asp-page="/UserFiles/Upload" class="btn btn-primary"><i class="fa fa-upload"></i> Upload a User File</a>
+</div>
