--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -119,7 +119,15 @@
 	<footer class="mb-3">
 		<button id="button-scrolltop" class="d-none position-fixed px-3 py-1 m-2 bottom-0 end-0 btn btn-primary fa fa-caret-up"></button>
 		<row class="justify-content-start align-items-center">
-			<p class="col-auto my-auto">&copy; @DateTime.UtcNow.Year - TASVideos <a href="https://github.com/TASVideos/tasvideos/commit/@ViewData["VersionSha"]">v@(ViewData["Version"])</a> - <a href="/api">API</a></p>
+			<p class="col-auto my-auto">
+				&copy; @DateTime.UtcNow.Year - TASVideos <a href="https://github.com/TASVideos/tasvideos/commit/@ViewData["VersionSha"]">v@(ViewData["Version"])</a> - <a href="/api">API</a>
+				@if (ViewData["WikiPage"] is null)
+				{
+					var path = this.Model.HttpContext.Request.Path.ToString().TrimStart('/');
+					<a class="btn bg-info text-dark btn-sm" asp-page="/Wiki/Referrers" asp-route-path="@path">List referrers</a>
+				}
+			</p>
+				
 		</row>
 	</footer>
 </div>
